Fixed margin on collapse + fixed loop on carousel

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -4,11 +4,7 @@
 .collapse {
     display: flex;
     flex-direction: column;
-
-    // Ajout d'une marge sauf pour le dernier enfant
-    &:not(:last-child) {
-        margin-bottom: 1.88rem;
-    }
+    margin-bottom: 1.88rem;
 
     &-bar {
         padding: 0.62rem 0.94rem;
@@ -60,11 +56,7 @@
 /*Media queries*/
 @media screen and (max-width: 767px) {
     .collapse {
-
-        // Ajout d'une marge sauf pour le dernier enfant
-        &:not(:last-child) {
         margin-bottom: 1.25rem;
-        }
 
         &-bar {
             padding: 0.62rem;
