--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -5,7 +5,7 @@
     margin-inline: clamp(1.19rem, 6vw, 6.25rem);
 
     .about-collapse {
-        margin: 2.38rem 6.78rem;
+        margin: 2.38rem 6.78rem 0.49rem 6.78rem;
 
     }
 }
